Fix default avatar + cropper canvas

--- a/src/tapatar.less
+++ b/src/tapatar.less
@@ -136,6 +136,7 @@
                 .tptr-big-image {
                     display: block;
                     margin: auto;
+                    width: 100%;
                 }
             }
 
